[package]
name = "account-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", features = ["serde"] }
bytemuck = "1.13.1"
chrono = "0.4.24"
chronoutil = "0.2.4"
rust_decimal = "1.29.1"
rusty-money = "0.4.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
