[package]
name = "account-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", features = ["serde"] }
async-trait = "0.1.68"
bytemuck = "1.13.1"
chrono = "0.4.24"
chronoutil = "0.2.4"
futures = "0.3.28"
rust_decimal = "1.29.1"
rusty-money = "0.4.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7.8"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
